[package]
name = "twitch_rss"
version = "0.1.0"
authors = ["tcallan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
twitch_api2 = { version = "0.6.1", features = ["helix", "reqwest", "time"] }
reqwest = "0.11.27" # needs to match what's used by twitch_api2
time = "0.3.34" # may need to match what's used by twitch_api2
cached = { version = "0.49.2", features = ["async"] }
rss = "2.0.7"
