[package]
name = "twitch_rss"
version = "0.1.0"
authors = ["tcallan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
twitch_api = { version = "0.7.2", features = ["helix", "reqwest", "typed-builder"] }
reqwest = "0.12.15" # needs to match what's used by twitch_api
time = { version = "0.3.45", features = ["parsing", "formatting"] } # may need to match what's used by twitch_api
cached = { version = "0.56.0", features = ["async"] }
rss = "2.0.12"
